--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cache me if you can</title>
+    <meta name="description" content="A tool to help measure cache times" />
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
